--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
     "dev": "next dev",
     "_build": "next build",
     "build": "npm run _build && next export",
-    "start": "next start"
+    "start": "npm run _build && next start"
   },
   "dependencies": {
+    "@xstate/react": "^1.3.1",
+    "bootstrap": "^4.6.0",
+    "lodash": "^4.17.21",
     "next": "10.0.9",
+    "query-string": "^7.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^6.15.5",
+    "react-uid": "^2.3.1",
+    "xstate": "^4.17.0"
+  },
+  "devDependencies": {
+    "husky": "^5.2.0",
+    "prettier": "^2.2.1"
   }
 }
